ElementHandles resolvable in JavaSource created for paths.